syntax = "proto3";

package register;

option go_package = "./proto;register";

service Register {
	rpc Register(RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
	string email = 1;
	string name = 2;
	string password = 3;
}

message RegisterResponse {
	string name = 1;
}
